# PlanAhead

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: CI-2.yml  CI-CLIPPY.yml  CI-Formatter.yml  CI-build.yml  CI.yml  README.md
src/: app.rs  database.rs  event_handler.rs  lib.rs  main.rs  state.rs  tasks.rs  terminal.rs  ui.rs
src/application/: app.rs  event_handler.rs  mod.rs  state.rs  tasks.rs
src/application/event_handlers/: add_task_handler.rs  calendar_handler.rs  default_handler.rs  edit_task_handler.rs  mod.rs  prompt_handler.rs  text_input_handler.rs
src/backend/: db.rs  mod.rs
src/database/: db.rs  mod.rs
src/event_handler/: event_handlers.rs  mod.rs
src/state/: states.rs
src/ui/: add_task_view.rs  default_view.rs  mod.rs  prompt_view.rs  stateful_ui.rs
src/ui/views/: add_task_view.rs  calendar_view.rs  default_view.rs  layout.rs  mod.rs  prompt_view.rs  task_input_view.rs  text_input_view.rs
src/ui/widgets/: calendar.rs  day.rs  mod.rs
src/user_interface/: mod.rs  terminal.rs  ui.rs
