[package]
name = "plan_ahead"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
anyhow = "1.0.69"
crossterm = "0.26.1"
tui = "0.19.0"
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
chrono = { version = "0.4.23", features = ["serde"] }
num-traits = "0.2.15"
itertools = "0.10.5"
